# KotlinTeX

./: .gitmodules  LICENSE  README-en.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build-publish-release.yml
build-logic/: build.gradle.kts  settings.gradle.kts
build-logic/src/main/kotlin/: multiplatform.gradle.kts  publish.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/androidMain/res/values/: strings.xml
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
katex-core/: build.gradle.kts  proguard-rules.pro
katex-core/src/androidMain/: AndroidManifest.xml
katex-core/src/androidMain/cpp/: CMakeLists.txt  freetype_android.cpp
katex-core/src/androidMain/kotlin/com/agog/mathdisplay/: MTMathView.kt
katex-core/src/androidMain/kotlin/com/pvporbit/freetype/: FreeTypeAndroid.kt  IFreeType.android.kt  NativeBinaryBuffer.android.kt  Utils.android.kt
katex-core/src/commonMain/kotlin/com/agog/mathdisplay/: MTMathView.kt
katex-core/src/commonMain/kotlin/com/pvporbit/freetype/: Bitmap.kt  CharMap.kt  Face.kt  FreeTypeConstants.kt  GlyphMetrics.kt  GlyphSlot.kt  IFreeType.kt  Kerning.kt  Library.kt  LibraryVersion.kt  MTFreeTypeMathTable.kt  NativeBinaryBuffer.kt  Pointer.kt  Size.kt  SizeMetrics.kt  SizeRequest.kt  Utils.kt
katex-core/src/iosMain/kotlin/com/pvporbit/freetype/: FreeTypeIos.kt  IFreeType.ios.kt  NativeBinaryBuffer.ios.kt  Utils.ios.kt
katex-core/src/nativeInterop/cinterop/: freetype.def
(+48 files in other folders)
